--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello! From HTML!</title>
+    <title>Momentum App</title>
     <!-- CSS파일 불러오기
         rel(ratiionship) -->
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <h1 class="hellllllo!!!!" id="title">Grab me!</h1>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./app.js"></script>
   </body>
