--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="hellllllo!!!!" id="title">Grab me!</h1>
+    <div class="hello">
+      <h1>Grab me 1!</h1>
+    </div>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./app.js"></script>
   </body>
