--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="hello">
-      <h1>Grab me 1!</h1>
+      <h1>Click me!</h1>
     </div>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./app.js"></script>
