--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -10,8 +10,10 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="hello">
-      <h1 class="sexy-font">Click me!</h1>
+    <div id="login-form">
+      <!-- 사용자의 이름 받기 -->
+      <input type="text" placeholder="what is your name?" />
+      <button>Log In</button>
     </div>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./app.js"></script>
