--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -11,14 +11,7 @@
   </head>
   <body>
     <form id="login-form">
-      <!-- 사용자의 이름 받기 -->
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="what is your name?"
-      />
-      <input type="submit" value="Log In" />
+      <a href="https://nomadcoders.co">Go to courses</a>
     </form>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./app.js"></script>
