--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -11,8 +11,16 @@
   </head>
   <body>
     <form id="login-form">
-      <a href="https://nomadcoders.co">Go to courses</a>
+      <!-- 사용자의 이름 받기 -->
+      <input
+        required
+        maxlength="15"
+        type="text"
+        placeholder="what is your name?"
+      />
+      <input type="submit" value="Log In" />
     </form>
+    <h1 id="greeting" class="hidden"></h1>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./app.js"></script>
   </body>
