--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <form id="login-form">
+    <form id="login-form" class="hidden">
       <!-- 사용자의 이름 받기 -->
       <input
         required
