--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -7,7 +7,7 @@
     <title>Momentum App</title>
     <!-- CSS파일 불러오기
         rel(ratiionship) -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <form id="login-form" class="hidden">
@@ -20,8 +20,10 @@
       />
       <input type="submit" value="Log In" />
     </form>
+    <h2 id="clock">00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
     <!-- 자바스크립트 파일 불러오기 -->
-    <script src="./app.js"></script>
+    <script src="./js/greetings.js"></script>
+    <script src="./js/clock.js"></script>
   </body>
 </html>
