--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
+    <h2 id="clock">00:00:00</h2>
     <form id="login-form" class="hidden">
       <!-- 사용자의 이름 받기 -->
       <input
@@ -20,8 +21,11 @@
       />
       <input type="submit" value="Log In" />
     </form>
-    <h2 id="clock">00:00:00</h2>
     <h1 id="greeting" class="hidden"></h1>
+    <form id="todo-form">
+      <input type="text" placeholder="Write a To Do and Press Enter" required />
+    </form>
+    <ul id="todo-list"></ul>
     <div id="quotes">
       <span></span>
       <span></span>
@@ -31,5 +35,6 @@
     <script src="./js/clock.js"></script>
     <script src="./js/quotes.js"></script>
     <script src="./js/background.js"></script>
+    <script src="./js/todo.js"></script>
   </body>
 </html>
