--- a/SeoJangSeok/Vanilla-JS-chrome-app/index.html
+++ b/SeoJangSeok/Vanilla-JS-chrome-app/index.html
@@ -30,6 +30,10 @@
       <span></span>
       <span></span>
     </div>
+    <div id="weather">
+      <span></span>
+      <span></span>
+    </div>
     <!-- 자바스크립트 파일 불러오기 -->
     <script src="./js/greetings.js"></script>
     <script src="./js/clock.js"></script>
