--- a/KimChanIl/codingapple/write.html
+++ b/KimChanIl/codingapple/write.html
@@ -34,11 +34,11 @@
       <div class="container mt-4">
       <form action="/add" method="POST">
         <div class="form-group">
-          <label >할 일</label>
+          <label >이름</label>
           <input type="text" class="form-control" name="title">
         </div>
         <div class="form-group">
-          <label>Due Date</label>
+          <label>나이</label>
           <input type="password" class="form-control" name="date">
         </div>
         <button type="submit" class="btn btn-danger">Submit</button>
