--- a/SeoJangSeok/CodingApple/write.html
+++ b/SeoJangSeok/CodingApple/write.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang>
+<html lang="en">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -49,7 +49,26 @@
       </div>
     </nav>
 
-    <h4>홈입니다.</h4>
+    <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">오늘의 할일</label>
+        <input
+          type="ToDo"
+          class="form-control"
+          id="exampleInputToDo"
+          aria-describedby="TodoHelp"
+          placeholder="오늘의 할일"
+        />
+        <small id="TodoHelp" class="form-text text-muted"
+          >Your Todo List!</small
+        >
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">세부내용</label>
+        <input type="detail" class="form-control" id="exampleInputDetail" />
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
