--- a/SeoJangSeok/CodingApple/write.html
+++ b/SeoJangSeok/CodingApple/write.html
@@ -49,26 +49,21 @@
       </div>
     </nav>
 
-    <form>
-      <div class="form-group">
-        <label for="exampleInputEmail1">오늘의 할일</label>
-        <input
-          type="ToDo"
-          class="form-control"
-          id="exampleInputToDo"
-          aria-describedby="TodoHelp"
-          placeholder="오늘의 할일"
-        />
-        <small id="TodoHelp" class="form-text text-muted"
-          >Your Todo List!</small
-        >
-      </div>
-      <div class="form-group">
-        <label for="exampleInputPassword1">세부내용</label>
-        <input type="detail" class="form-control" id="exampleInputDetail" />
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
+    <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
+
+    <div class="container mt-3">
+      <form>
+        <div class="form-group">
+          <label>오늘의 할일</label>
+          <input type="text" class="form-control" placeholder="오늘의 할일" />
+        </div>
+        <div class="form-group">
+          <label>날짜</label>
+          <input type="text" class="form-control" />
+        </div>
+        <button type="submit" class="btn btn-outline-secondary">Submit</button>
+      </form>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
