--- a/SeoJangSeok/CodingApple/write.html
+++ b/SeoJangSeok/CodingApple/write.html
@@ -52,14 +52,19 @@
     <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
     <div class="container mt-3">
-      <form>
+      <form action="/add" method="post">
         <div class="form-group">
           <label>오늘의 할일</label>
-          <input type="text" class="form-control" placeholder="오늘의 할일" />
+          <input
+            type="text"
+            class="form-control"
+            name="title"
+            placeholder="오늘의 할일"
+          />
         </div>
         <div class="form-group">
           <label>날짜</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" name="date" />
         </div>
         <button type="submit" class="btn btn-outline-secondary">Submit</button>
       </form>
