--- a/ShinMyongJin/CodingApple/write.html
+++ b/ShinMyongJin/CodingApple/write.html
@@ -14,61 +14,18 @@
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">할일</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNavDropdown"
-          aria-controls="navbarNavDropdown"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">과정</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">으쯔라고</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                사용자 정보
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
     </nav>
     <h4 class="container mt-4"><strong>글 작성페이지</strong></h4>
 
     <div class="container mt-3">
-      <form>
+      <form action="/add" method="POST">
         <div class="form-group">
           <label>오늘의 할일</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" name="title" />
         </div>
         <div class="form-group">
           <label>날짜</label>
-          <input type="text" class="form-control" />
+          <input type="text" class="form-control" name="date" />
         </div>
         <button type="submit" class="btn btn-outline-secondary">Submit</button>
       </form>
