--- a/SeoJangSeok/CodingApple/write.html
+++ b/SeoJangSeok/CodingApple/write.html
@@ -40,7 +40,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Write</a>
+            <a class="nav-link" href="/write">Write</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">임시</a>
@@ -59,7 +59,7 @@
             type="text"
             class="form-control"
             name="title"
-            placeholder="오늘의 할일"
+            placeholder="할일을 적으세요."
           />
         </div>
         <div class="form-group">
